christine exp fix

--- a/short_version/PNAS-main.tex
+++ b/short_version/PNAS-main.tex
@@ -157,7 +157,7 @@ In the typical use of the above models for link prediction, some observations (\
 In this article, our aim was to study whether stochastic mixed membership models such as ILFM and IMMSB can generate networks having  properties frequently verified in real  social networks, namely  homophily and preferential attachment. 
 In this aim, we have introduced formal definitions of  these properties and  analysis the behavior of these models in this theoretical  framework. We have shown that the models satisfy the homophily with the similarity that underlies them but, that it is not the case for the natural similarity. 
 
-Concerning the preferential attachment, the models do not comply with the preferential attach, defined on the whole network. However, the situation is more contrasted when the property is considered at the local level in other words for the communities. In that case, we show that IMMSB complies the property whereas ILFM does not.
+Concerning the preferential attachment, the models do not comply with the preferential attachment, defined on the whole network. However, the situation is more contrasted when the property is considered at the local level. In that case, we shown that IMMSB complies the property whereas ILFM does not.
 
 Finally, experiments done on real and artificial networks have been presented to illustrate our theoretical results. They show that even if there is not a theoretical guarantee that the networks generated  have the  properties, these models are able to generate networks verifying these both properties if they are  strongly present in the dataset used to learn the model.
 
