--- a/short_version/pnas.bib
+++ b/short_version/pnas.bib
@@ -11,7 +11,7 @@
 @inproceedings{meeds2006modeling,
     title={Modeling dyadic data with binary latent factors},
     author={Meeds, Edward and Ghahramani, Zoubin and Neal, Radford M and Roweis, Sam T},
-    booktitle={Advances in neural information processing systems},
+    booktitle={Advances in Neural Information Processing Systems},
     pages={977--984},
     year={2006}
 }
@@ -29,21 +29,21 @@
 @inproceedings{miller2009nonparametric,
   title={Nonparametric latent feature models for link prediction},
   author={Miller, Kurt and Jordan, Michael I and Griffiths, Thomas L},
-  booktitle={Advances in neural information processing systems},
+  booktitle={Advances in Neural Information Processing Systems},
   pages={1276--1284},
   year={2009}
 }
 
 @INPROCEEDINGS{IBP, crossref = {griffiths2011indian} }
 @article{griffiths2011indian,
-  title={The indian buffet process: An introduction and review},
-  author={Griffiths, Thomas L and Ghahramani, Zoubin},
-  journal={The Journal of Machine Learning Research},
-  volume={12},
-  pages={1185--1224},
-  year={2011},
-  publisher={JMLR. org}
-}
+ author = {Griffiths, Thomas L. and Ghahramani, Zoubin},
+ title = {The Indian Buffet Process: An Introduction and Review},
+ journal = {J. Mach. Learn. Res.},
+ volume = {12},
+ month = jul,
+ year = {2011},
+ pages = {1185--1224},
+} 
 
 @inproceedings{gorur06,
   title={A choice model with infinitely many latent features},
@@ -201,17 +201,11 @@ publisher={JSTOR}
                Ravi Kumar and
                Andrew Tomkins},
   title     = {Microscopic evolution of social networks},
-  booktitle = {Proceedings of the 14th {ACM} {SIGKDD} International Conference on
+  booktitle = {Proceedings of the 14th International Conference on
                Knowledge Discovery and Data Mining, Las Vegas, Nevada, USA, August
                24-27, 2008},
   pages     = {462--470},
   year      = {2008},
-  crossref  = {DBLP:conf/kdd/2008},
-  url       = {http://doi.acm.org/10.1145/1401890.1401948},
-  doi       = {10.1145/1401890.1401948},
-  timestamp = {Mon, 14 May 2012 09:20:40 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/kdd/LeskovecBKT08},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
 @proceedings{DBLP:conf/kdd/2008,
@@ -243,12 +237,8 @@ publisher={JSTOR}
   author    = {Albert{-}L{\'{a}}szl{\'{o}} Barab{\'{a}}si},
   title     = {Linked - how everything is connected to everything else and what it
                means for business, science, and everyday life},
-  publisher = {Plume},
+  publisher = "{Plume}",
   year      = {2003},
-  isbn      = {978-0-452-28439-5},
-  timestamp = {Thu, 14 Apr 2011 14:43:21 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/books/daglib/0012457},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
 @article{Liben-Nowell07,
@@ -256,15 +246,8 @@ publisher={JSTOR}
                Jon M. Kleinberg},
   title     = {The link-prediction problem for social networks},
   journal   = {{JASIST}},
-  volume    = {58},
-  number    = {7},
   pages     = {1019--1031},
   year      = {2007},
-  url       = {http://dx.doi.org/10.1002/asi.20591},
-  doi       = {10.1002/asi.20591},
-  timestamp = {Mon, 26 Nov 2007 12:58:23 +0100},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/jasis/Liben-NowellK07},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 @incollection{HassanZaki11,
   author    = {Mohammad Al Hasan and
@@ -313,20 +296,26 @@ publisher={JSTOR}
 @inproceedings{la2010randomization,
   title={Randomization tests for distinguishing social influence and homophily effects},
   author={La Fond, Timothy and Neville, Jennifer},
-  booktitle={Proceedings of the 19th international conference on World wide web},
+  booktitle={Proceedings of the 19th International Conference on World Wide Web},
   pages={601--610},
   year={2010},
-  organization={ACM}
 }
+@inproceedings{la2010randomization,
+ author = {La Fond, Timothy and Neville, Jennifer},
+ title = {Randomization Tests for Distinguishing Social Influence and Homophily Effects},
+ booktitle = {Proceedings of the 19th International Conference on World Wide Web},
+ series = {WWW '10},
+ year = {2010},
+ pages = {601--610},
+} 
+
 @article{barabasi1999emergence,
   title={Emergence of scaling in random networks},
   author={Barab{\'a}si, Albert-L{\'a}szl{\'o} and Albert, R{\'e}ka},
-  journal={science},
-  volume={286},
+  journal={Science},
   number={5439},
   pages={509--512},
   year={1999},
-  publisher={American Association for the Advancement of Science}
 }
 @article{church1995poisson,
   title={Poisson mixtures},
@@ -336,7 +325,6 @@ publisher={JSTOR}
   number={02},
   pages={163--190},
   year={1995},
-  publisher={Cambridge Univ Press}
 }
 @incollection{clinchant2008bnb,
   title={The BNB distribution for text modeling},
@@ -344,7 +332,6 @@ publisher={JSTOR}
   booktitle={Advances in Information Retrieval},
   pages={150--161},
   year={2008},
-  publisher={Springer}
 }
 @inproceedings{clinchant2010information,
   title={Information-based models for ad hoc IR},
@@ -352,7 +339,6 @@ publisher={JSTOR}
   booktitle={Proceedings of the 33rd international ACM SIGIR conference on Research and development in information retrieval},
   pages={234--241},
   year={2010},
-  organization={ACM}
 }
 
 @INPROCEEDINGS{AMMSB, crossref = {gopalan2013efficient} }
@@ -363,7 +349,6 @@ publisher={JSTOR}
     number={36},
     pages={14534--14539},
     year={2013},
-    publisher={National Acad Sciences}
 }
 @INPROCEEDINGS{MMM, crossref = {airoldi2014handbook} }
 @book{airoldi2014handbook,
@@ -380,7 +365,6 @@ publisher={JSTOR}
     number={1},
     pages={47},
     year={2002},
-    publisher={APS}
 }
 
 
@@ -405,7 +389,6 @@ publisher={JSTOR}
     number={5},
     pages={058701},
     year={2003},
-    publisher={APS}
 }
 @inproceedings{menon2011link,
     title={Link prediction via matrix factorization},
