--- a/short_version/experimentations.tex
+++ b/short_version/experimentations.tex
@@ -5,7 +5,7 @@ To illustrate our theoretical results, we evaluate the predictive performance an
 
 \subsection{Homophily Measures}
 
-For the homophily property, defined in section \ref{sec:homophily}, we represent using boxplots, the distributions of the similarity natural $s_n(i,j)$ and latent $s_l(i,j)$ computed respectively on linked and non-linked pairs of nodes. Note that for all the models the values are aggregated on the datasets andd reported as final results.
+For the homophily property, defined in section \ref{sec:homophily}, we represent using boxplots, the distributions of the similarity natural $s_n(i,j)$ and latent $s_l(i,j)$ computed respectively on linked and non-linked pairs of nodes. Note that for all the models the values are aggregated on the datasets and reported as final results.
 % The links or non-links are obtained by running the models in a generative mode. For each models we aggregated  the similarity of each couple of nodes as well as link prediction (links or non-links). The distributions of similarities are then represented on a boxplot that shows how the they are spread according to links and non-links.
 
 
@@ -21,8 +21,8 @@ If  $p$-value is large (close to 1), then the difference between the data and th
 Concerning the local preferential attachment, 
 the computation of the local degree distributions for each model is detailed below: 
 \begin{itemize}
-    \item For each network learned with IMMSB, the tensor $Z$ indicates the membership of the nodes for each  interaction. In order to draw the local degree distribution for a factor $k$, we reduce the adjacency matrix in order to retain only the links that occur for the factor $k$. The local degree distribution is thus computed on the reduced adjacency matrix  $Y^k =\{ y_{ij}^k=1 \ \textrm{if}\ y_{ij}=1 , z_{i\rightarrow j}=k, z_{i\leftarrow j}=k; 0 \ \textrm{otherwise} \}$.
-        \item For ILFM, each node $i$ is associated with a feature vector $\mat{f}_{i}$. The local degree distribution for the factor $k$ is obtained by taking into account only the contribution of this feature $k$ on the adjacency matrix. Thus, the local degree degree distribution is computed on the reduced adjacency matrix defined by $Y^k =\{ y_{ij}^k=1 \ \textrm{if}\ y_{ij}=1 , f_{ik}=1, f_{jk}=1; 0 \ \textrm{otherwise}\}$.
+    \item For each network learned with IMMSB, the tensor $Z$ indicates the membership of the nodes for each  interaction. In order to draw the local degree distribution for a class $k$, we reduce the adjacency matrix in order to retain only the links that occur for the class $k$. The local degree distribution is thus computed on the reduced adjacency matrix  $Y^k =\{ y_{ij}^k=1 \ \textrm{if}\ y_{ij}=1 , z_{i\rightarrow j}=k, z_{i\leftarrow j}=k; 0 \ \textrm{otherwise} \}$.
+        \item For ILFM, each node $i$ is associated with a feature vector $\mat{f}_{i}$. The local degree distribution for the class $k$ is obtained by taking into account only the contribution of this feature $k$ on the adjacency matrix. Thus, the local degree degree distribution is computed on the reduced adjacency matrix defined by $Y^k =\{ y_{ij}^k=1 \ \textrm{if}\ y_{ij}=1 , f_{ik}=1, f_{jk}=1; 0 \ \textrm{otherwise}\}$.
 \end{itemize}
 
 
@@ -98,7 +98,7 @@ This inference procedure was run ten times and the average values are reported a
 
 \paragraph{Preferential attachment.} Table \ref{table:me_gofit} reports the value of the power-law goodness of fit for IMMSB and ILFM in the global case (left) and in the local case (right). It appears that for both models, the global preferential attachment is only verified for networks generated from datasets where the property was observed, namely in Network1 with p-value equals to 0.9 for IMMSB and 1 for ILFM, and in Blogs with a p-value equals to 1 for the both models whereas the property is not verified in Network2 and in Manufacturing, where p-values equal 0. This is in accordance with Proposition 2.1 according to which, both ILFM and IMMSB do not satisfy global preferential attachment. However, these models are able to capture this property if it exists in the training dataset.  Moreover, we can observe that, in the local case, IMMSB complies with the preferential attachment with $p$-values equals or close to 1 for the four networks while, ILFM obtained low p-values for the networks that were less locally bursty respectively equal to 0 and 0.3 for Network2 and Manufacturing. Also, the power-law coefficients $\alpha$ are significantly greater for IMMSB than for ILFM and specially for the bursty networks Network1 and Blogs.
 
-Figure \ref{fig:me_local} illustrates the local preferential attachment by plotting the local degree distributions for Network1 (top) and Network2 (bottom) learned with IMMSB (left) and ILFM (right). The shape of local degree distributions appear more linear for IMMSB and with more fluctuations for ILFM. This illustrates the inability  of ILFM to capture local preferential attachment property,  as stated in Proposition 2.2. 
+Figure \ref{fig:me_local} illustrates the local preferential attachment by plotting the local degree distributions for Network1 (top) and Network2 (bottom) learned with IMMSB (left) and ILFM (right). The shape of local degree distributions appears more linear for IMMSB and with more fluctuations for ILFM. This illustrates the inability  of ILFM to capture local preferential attachment property,  as stated in Proposition 2.2. 
 
 \begin{table}[t]
 \caption{Preferential attachment measures for training datasets and networks generated with fitted models.}
@@ -170,7 +170,7 @@ Manufacturing & 0 & 1.2 &   0.3 \(\pm\) 0.3  &  1.3 \(\pm\) 0.0 \\
 
 \paragraph{Prediction performance.}
 
-Figure \ref{fig:auc} compares the performance  of the models on the different datasets in function of the training set size. In the bottom plot,  y-axis gives the relative performance defined as the difference of the AUC values obtained for IMMSB and ILFM: $AUC_{IMMSB} - AUC_{ILFM}$ whereas x-axis indicates the percentage of data (links) randomly removed from the datasets and  used as a testing set. Hence, the number of training data decreases with the x-axis and a positive value on the y-axis indicates that IMMSB outperforms ILFM.  Note that the relative performance correspond to the difference of the MAX AUC values obtained for both models on the ten inference experiences.
+Figure \ref{fig:auc} compares the performance  of the models on the different datasets in function of the training set size. In the bottom plot,  y-axis gives the relative performance defined as the difference of the AUC values obtained for IMMSB and ILFM: $AUC_{IMMSB} - AUC_{ILFM}$ whereas x-axis indicates the percentage of data (links) randomly removed from the datasets and  used as a testing set. Hence, the number of training data decreases with the x-axis and a positive value on the y-axis indicates that IMMSB outperforms ILFM.  Note that the relative performance corresponds to the difference of the MAX AUC values obtained for both models on the ten inference experiences.
 
 The top plot illustrates a case where 20 percent of the data is used as testing set and where IMMSB dominates ILFM on Network1 (left) and the opposite for Network2 (right).
 
