--- a/img/corpus/testset_max_100_roc_evolution_table.tex
+++ b/img/corpus/testset_max_100_roc_evolution_table.tex
@@ -3,12 +3,10 @@
 
 5 & 10 & 15 & 20 & 25 & 30 & 35 & 40 & 45 & 50 & 55 & 60 & 65 & 70 & 75 & 80 & 85 & 90 & 95 \\\midrule
 
-Blogs & -0.035 & -0.046 & -0.042 & -0.017 & -0.012 & -0.015 & -0.023 & -0.023 & -0.019 & -0.014 & -0.012 & -0.016 & -0.007 & -0.002 & -0.001 & 0.005 & 0.005 & 0.007 & 0.017 \\
-Manufacturing & -0.031 & -0.007 & 0.004 & 0.004 & -0.001 & 0.009 & -0.000 & 0.010 & 0.004 & 0.015 & 0.012 & 0.017 & 0.017 & 0.020 & 0.022 & 0.005 & 0.023 & 0.025 & 0.027 \\
-Network
-1 & -0.184 & -0.119 & -0.097 & -0.059 & -0.047 & -0.057 & -0.044 & -0.047 & -0.020 & -0.021 & -0.023 & -0.031 & -0.016 & -0.012 & -0.015 & -0.019 & -0.059 & -0.065 & -0.094 \\
-Network
-4 & -0.154 & -0.134 & -0.113 & -0.133 & -0.128 & -0.114 & -0.127 & -0.124 & -0.123 & -0.124 & -0.124 & -0.123 & -0.120 & -0.127 & -0.127 & -0.126 & -0.123 & -0.125 & -0.115 \\
+Blogs & -0.035 & -0.046 & -0.042 & -0.017 & -0.012 & -0.015 & -0.023 & -0.023 & -0.019 & -0.030 & -0.017 & -0.023 & -0.021 & -0.015 & -0.001 & -0.012 & -0.007 & 0.002 & 0.020 \\
+Manufacturing & -0.031 & -0.007 & 0.004 & 0.004 & -0.001 & 0.009 & -0.000 & 0.010 & 0.004 & 0.007 & 0.008 & 0.003 & -0.004 & 0.008 & 0.014 & 0.005 & 0.028 & 0.027 & 0.009 \\
+Network1 & -0.184 & -0.119 & -0.097 & -0.059 & -0.047 & -0.057 & -0.044 & -0.035 & -0.020 & -0.019 & -0.027 & -0.011 & -0.016 & -0.012 & -0.015 & -0.034 & -0.059 & -0.034 & -0.094 \\
+Network2 & -0.154 & -0.134 & -0.113 & -0.133 & -0.128 & -0.114 & -0.127 & -0.124 & -0.123 & -0.126 & -0.125 & -0.128 & -0.128 & -0.127 & -0.127 & -0.124 & -0.125 & -0.114 & -0.107 \\
 
 \bottomrule
 \end{tabular}
