--- a/img/corpus/testset_max_20_roc_evolution_table.tex
+++ b/img/corpus/testset_max_20_roc_evolution_table.tex
@@ -1,14 +1,12 @@
-\begin{tabular}{@{}lrrrrrrrrrrrrrrrrrrr@{}}
+\begin{tabular}{@{}lrrrrrrrrrrrrrrrr@{}}
 \toprule
 
-5 & 10 & 15 & 20 & 25 & 30 & 35 & 40 & 45 & 50 & 55 & 60 & 65 & 70 & 75 & 80 & 85 & 90 & 95 \\\midrule
+5 & 10 & 15 & 20 & 25 & 30 & 35 & 40 & 45 & 50 & 55 & 60 & 65 & 70 & 75 & 80 \\\midrule
 
-Blogs & -0.035 & -0.046 & -0.042 & -0.017 & -0.012 & -0.019 & -0.022 & -0.020 & -0.021 & -0.021 & -0.011 & -0.013 & -0.006 & -0.006 & 0.002 & 0.000 & 0.001 & 0.012 & 0.033 \\
-Manufacturing & -0.031 & -0.007 & 0.004 & 0.003 & -0.001 & 0.007 & 0.000 & 0.003 & 0.002 & 0.011 & 0.001 & 0.014 & 0.002 & 0.019 & 0.000 & -0.020 & 0.021 & 0.039 & -0.050 \\
-Network
-1 & -0.184 & -0.119 & -0.097 & -0.058 & -0.043 & -0.044 & -0.018 & -0.027 & 0.006 & 0.006 & 0.011 & 0.018 & 0.007 & 0.026 & 0.021 & 0.029 & -0.049 & -0.010 & -0.033 \\
-Network
-4 & -0.154 & -0.134 & -0.113 & -0.133 & -0.131 & -0.121 & -0.139 & -0.143 & -0.147 & -0.160 & -0.165 & -0.171 & -0.176 & -0.194 & -0.217 & -0.244 & -0.239 & -0.239 & -0.212 \\
+Blogs & -0.035 & -0.046 & -0.042 & -0.017 & -0.012 & -0.017 & -0.022 & -0.013 & -0.021 & -0.021 & -0.011 & -0.019 & -0.019 & -0.005 & 0.000 & -0.014 \\
+Manufacturing & -0.031 & -0.007 & 0.004 & 0.003 & -0.001 & 0.011 & 0.000 & 0.006 & 0.002 & 0.008 & 0.013 & 0.005 & 0.007 & 0.019 & -0.000 & -0.009 \\
+Network1 & -0.184 & -0.119 & -0.097 & -0.054 & -0.043 & -0.045 & -0.018 & -0.027 & 0.002 & 0.015 & 0.011 & 0.037 & 0.009 & 0.020 & 0.038 & 0.013 \\
+Network2 & -0.154 & -0.136 & -0.113 & -0.133 & -0.131 & -0.121 & -0.139 & -0.144 & -0.147 & -0.153 & -0.163 & -0.171 & -0.171 & -0.198 & -0.217 & -0.238 \\
 
 \bottomrule
 \end{tabular}
